--- a/informationPages.css
+++ b/informationPages.css
@@ -6,29 +6,20 @@ body {
     background-position: center;
 }
 
-.sign-up-form {
-    width: 350px;
-    box-shadow: 0 0 13px 0 rgba(0,0,0,0.8);
-    background: #fff;
-    padding: 20px;
-    margin: 8% auto 0;
-    text-align: center;
-}
-
-.input-entries {
-    text-align: center;
-}
-
 label {
     font-family: sans-serif;
 }
 
 h1{
+    text-align: center;
     font-family: Helvetica;
+    color: white;
 }
 
 h2{
+    text-align: center;
     font-family: Helvetica;
+    color: white;
 }
 
 
