--- a/signUp.css
+++ b/signUp.css
@@ -11,7 +11,7 @@ body {
     box-shadow: 0 0 13px 0 rgba(0,0,0,0.8);
     background: #fff;
     padding: 20px;
-    margin: 8% auto 0;
+    margin: 2% auto 0;
     text-align: center;
 }
 
@@ -71,4 +71,35 @@ li a:hover {
 
 img {
     border: 5px solid #555;
+}
+
+input {
+    width: 90%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    margin-bottom: 15px; 
+}
+
+button {
+  background: #5E5DF0;
+  border-radius: 999px;
+  box-shadow: #5E5DF0 0 10px 20px -10px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
+  margin-top: 10px;
+  margin-bottom: 15px;
 }
